--- a/assets/main.css
+++ b/assets/main.css
@@ -47,13 +47,12 @@ body {
 	max-width: 800px;
 	min-width: 210px;
 	margin: 1rem auto; 
-	background-color: white;
-	color: #888;
-	overflow: hidden;
+    overflow: hidden;
+    border: 1px solid aqua;
 }
 
 .dropdown-container {
-	background-color: white;
+	background-color: transparent;
 }
 
 .dropdown-container header {
@@ -99,5 +98,58 @@ body {
 .dropdown-container .article-inner {
 	padding: 1rem;
 }
+
+.schedule__inner{
+    display: flex;
+    flex-direction: column;
+    padding: 6px 10px;
+}
+.block{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: #000000;
+
+}
+.block > *{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.trail{
+    background-color: #f9c53b;
+}
+.trail-elect{
+    background: rgb(250,197,59);
+background: linear-gradient(128deg, rgba(250,197,59,1) 27%, rgba(0,159,175,1) 57%);
+}
+.online{
+    background-color: #a44c96 ;
+    color: #ffffff;
+}
+.yoga{
+    background-color: #009faf ;
+}
+.acondi{
+    background-color: #ec822e;
+    font-size: 12px;
+    padding: 3px 10px !important;
+}
+.acondi-online{
+    font-size: 12px;
+    padding: 4px 10px !important;
+}
+.orientacion{
+    background-color: #e03e63;
+    color: #ffffff;
+    font-size: 13px;
+    padding: 9px 0 !important;
+}
+.tro{
+    background-color: #71c8f8;
+    font-size: 12px;
+    padding: 3px 10px !important;
+}
+
 
 
