--- a/assets/main.css
+++ b/assets/main.css
@@ -15,13 +15,14 @@
 
 body {
 	margin: 1rem;
-    /* background-color: honeydew; */
-    background-image: url('https://images.pexels.com/photos/1008739/pexels-photo-1008739.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
-    background-repeat: no-repeat;
+    background-color: rgb(72 72 72);
+    /* background-image: url('https://images.pexels.com/photos/1008739/pexels-photo-1008739.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'); */
+    /* background-repeat: no-repeat; */
     /* background-size: cover; */
+    
     background-position: center;
     font-family: Helvetica, Arial, sans-serif;
-    color: #888;
+    color: #ffffff;
     
 }
 .header{
